syntax = "proto3";

option go_package = "./pb;pb";

package pb;

import "processor_message.proto";
import "memory_message.proto";
import "storage_message.proto";
import "screen_message.proto";
import "keyboard_message.proto";
import "google/protobuf/timestamp.proto";

message Laptop {
    string id = 1;
    string brand = 2;
    string name = 3;
    Cpu cpu = 4;
    Memory memory = 5;
    repeated Gpu gpus = 6;
    repeated Storage storages = 7;
    Screen screen = 8;
    Keyboard key_board = 9;
    oneof weight {
        double weight_kg = 10;
        double weight_lb = 11;
    }
    double price_usd = 12;
    uint32 release_year = 13;
    google.protobuf.Timestamp time_stamp = 14;
}