syntax = "proto3";
import "memory_message.proto";
package pb;
option go_package="./pb;pb";


message Cpu {
  string brand = 1;
  string name  = 2;
  uint32 number_cores = 3;
  uint32 number_threads = 4;
  double min_ghz = 5;
  double max_ghz = 6;
}

message Gpu {
  string brand = 1;
  string name = 2;
  double min_ghz = 3;
  double max_ghz = 4;
  Memory memory = 5;
}